test/classes/errors/nilability-init-var/init-var-oknil-owned-from-oknil-borrowed.good
init-var-oknil-owned-from-oknil-borrowed.chpl:9: error: cannot create an owned variable from a borrowed class instance
